--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -7,7 +7,7 @@
     "LabelApiDocumentation": "Api Dokumentation",
     "LabelDeveloperResources": "Entwickler Ressourcen",
     "LabelBrowseLibrary": "Bibliothek durchsuchen",
-    "LabelConfigureServer": "Configure Emby",
+    "LabelConfigureServer": "Konfiguriere Emby",
     "LabelOpenLibraryViewer": "\u00d6ffne Bibliothekenansicht",
     "LabelRestartServer": "Server neustarten",
     "LabelShowLogWindow": "Zeige Log Fenster",
@@ -21,12 +21,12 @@
     "ButtonQuickStartGuide": "Schnellstart Instruktionen",
     "LabelYourFirstName": "Vorname:",
     "MoreUsersCanBeAddedLater": "Weitere Benutzer k\u00f6nnen sp\u00e4ter \u00fcber die Optionsleiste hinzugef\u00fcgt werden.",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "UserProfilesIntro": "Emby bietet von Haus aus Unterst\u00fctzung von Benutzerprofilen, die ihre eigenen Ansichten, Altersfreigaben und Spielst\u00e4nde von Medien kontrollieren k\u00f6nnen.",
     "LabelWindowsService": "Windows-Dienst",
     "AWindowsServiceHasBeenInstalled": "Ein Windows Dienst wurde installiert.",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro1": "Emby Server l\u00e4uft normalerweise als Desktop-Anwendung mit einem Icon in der Anwendungsanzeige. Wenn Sie es lieber als Hintergrunddienst starten m\u00f6chten, so k\u00f6nnen Sie den Server \u00fcber die Windows Dienste starten.",
     "WindowsServiceIntro2": "Der Dienst kann nicht zu gleichen Zeit wie die Desktop Anwendung laufen. Schlie\u00dfe daher die Desktop Anwendung bevor du den Dienst startest. Der Dienst ben\u00f6tigt administrative Rechte, die du \u00fcber die Systemsteuerung einstellen musst. Beachte bitte auch, dass der Dienst zur Zeit nicht automatisch aktualisiert wird. Neue Versionen m\u00fcssen daher manuell installiert werden.",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "WizardCompleted": "Das ist alles was wir bis jetzt brauchen. Emby hat nun angefangen Informationen \u00fcber Ihre Medienbibliothek zu sammeln. Schauen Sie sich ein paar unserer Apps an, dann Klicken Sie auf <b>Fertig<\/b> um das <b>Server Dashboard<\/b> anzuzeigen.",
     "LabelConfigureSettings": "Konfiguriere Einstellungen",
     "LabelEnableVideoImageExtraction": "Aktiviere Videobild-Extrahierung",
     "VideoImageExtractionHelp": "F\u00fcr Videos die noch keien Bilder haben, und f\u00fcr die wir keine Internetbilder finden k\u00f6nnen. Hierdurch wird der erste Bibliothekenscan etwas mehr Zeit beanspruchen, f\u00fchrt aber zu einer ansprechenderen Pr\u00e4sentation.",
@@ -34,7 +34,7 @@
     "LabelChapterImageExtractionForMoviesHelp": "Das Extrahieren von Kapitel-Bildern erm\u00f6glicht es den Clients eine grafische Szenenauswahl anzubieten. Das Erstellen ist recht langsam, rechenintensiv und erfordert einige Gigabyte an freien Speicherplatz. Diese Aufgabe startet jede Nacht, das kann aber in den geplanten Aufgaben ge\u00e4ndert werden. Es wird nicht empfohlen diese Aufgabe in Zeiten hoher Server-Auslastung zu starten.",
     "LabelEnableAutomaticPortMapping": "Aktiviere automatische Portweiterleitung",
     "LabelEnableAutomaticPortMappingHelp": "UPnP erm\u00f6glicht die automatische Routerkonfiguration f\u00fcr den einfachen Remote-Zugriff. Diese Option ist nicht f\u00fcr jeden Router verf\u00fcgbar.",
-    "HeaderTermsOfService": "Emby Terms of Service",
+    "HeaderTermsOfService": "Emby Nutzungsbedingungen",
     "MessagePleaseAcceptTermsOfService": "Bitte akzeptieren Sie die Nutzungsbedingungen & Datenschutzbestimmungen bevor Sie fortfahren.",
     "OptionIAcceptTermsOfService": "Ich akzeptiere die Nutzungsbedingungen.",
     "ButtonPrivacyPolicy": "Datenschutzbestimmungen",
@@ -47,10 +47,10 @@
     "LabelDashboardSourcePathHelp": "Spezifiziere den Pfad zum Dashboard-UI-Verzeichniss, falls der Server von der Source ausgef\u00fchrt wird. Alle Web-Client-Dateien werden von diesem Pfad aus bedient werden.",
     "ButtonConvertMedia": "Konvertiere Medien",
     "ButtonOrganize": "Organisieren",
-    "LinkedToEmbyConnect": "Linked to Emby Connect",
+    "LinkedToEmbyConnect": "Verbunden mit Emby Connect",
     "HeaderSupporterBenefits": "Unterst\u00fctzer Vorteile",
     "HeaderAddUser": "Benutzer hinzuf\u00fcgen",
-    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
+    "LabelAddConnectSupporterHelp": "Um einen Benutzer hinzuzuf\u00fcgen, der nicht angezeigt wird, m\u00fcssen Sie diesen erst mit Emby Connect von seinem Benutzerprofil verbinden.",
     "LabelPinCode": "PIN Code:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Abbrechen",
@@ -84,7 +84,7 @@
     "OptionDetectArchiveFilesAsMedia": "Behandle Archive wie Medien",
     "OptionDetectArchiveFilesAsMediaHelp": "Wenn aktiviert werden .rar und .zip Datei-Erweiterungen wie Medien behandelt.",
     "LabelEnterConnectUserName": "Benutzername oder Email:",
-    "LabelEnterConnectUserNameHelp": "This is your Emby online account user name or password.",
+    "LabelEnterConnectUserNameHelp": "Dies ist Ihr Emby online Konto Benutzername oder Passwort.",
     "LabelEnableEnhancedMovies": "Aktiviere erweiterte Filmdarstellung.",
     "LabelEnableEnhancedMoviesHelp": "Wenn aktiviert, werden Filme als Verzeichnisse dargestellt, welche Trailer, Extras, Besetzung & Crew sowie weitere Inhalte enth\u00e4lt.",
     "HeaderSyncJobInfo": "Synchronisations-Aufgabe",
@@ -113,7 +113,7 @@
     "LabelSaveLocalMetadata": "Speichere Bildmaterial und Metadaten in den Medienverzeichnissen",
     "LabelSaveLocalMetadataHelp": "Durch die Speicherung von Bildmaterial und Metadaten direkt in den Medienverzeichnissen, befinden sich diese an einem Ort wo sie sehr leicht bearbeitet werden k\u00f6nnen.",
     "LabelDownloadInternetMetadata": "Lade Bildmaterial und Metadaten aus dem Internet",
-    "LabelDownloadInternetMetadataHelp": "Emby Server can download information about your media to enable rich presentations.",
+    "LabelDownloadInternetMetadataHelp": "Emby Server kann Informationen \u00fcber Ihre Medien herunterladen um Anzeigen zu bereichern",
     "TabPreferences": "Einstellungen",
     "TabPassword": "Passwort",
     "TabLibraryAccess": "Bibliothekenzugriff",
@@ -288,12 +288,12 @@
     "TabAbout": "\u00dcber",
     "TabSupporterKey": "Unterst\u00fctzerschl\u00fcssel",
     "TabBecomeSupporter": "Werde ein Unterst\u00fctzer",
-    "ProjectHasCommunity": "Emby has a thriving community of users and contributors.",
-    "CheckoutKnowledgeBase": "Check out our knowledge base to help you get the most out of Emby.",
+    "ProjectHasCommunity": "Emby hat eine wachsende Community von Benutzern und Unterst\u00fctzern.",
+    "CheckoutKnowledgeBase": "Schauen Sie sich in der Emby Wissensdatenbank um, um das beste aus Emby heraus zu holen.",
     "SearchKnowledgeBase": "Durchsuche die Knowledge Base",
     "VisitTheCommunity": "Besuche die Community",
-    "VisitProjectWebsite": "Visit the Emby Web Site",
-    "VisitProjectWebsiteLong": "Visit the Emby Web site to catch the latest news and keep up with the developer blog.",
+    "VisitProjectWebsite": "Beuchen Sie die Emby Website",
+    "VisitProjectWebsiteLong": "Besuchen Sie die Emby Website f\u00fcr aktuelle Informationen und bleiben Sie auf dem letzten Stand mit dem Entwickler Blog.",
     "OptionHideUser": "Verberge diesen Benutzer in den Anmeldebildschirmen",
     "OptionHideUserFromLoginHelp": "Hilfreich f\u00fcr private oder versteckte Administrator-Konten. Der Benutzer muss sich manuell mit der Eingabe des Benutzernamens und Passworts anmelden.",
     "OptionDisableUser": "Sperre diesen Benutzer",
