--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrateur",
     "Password": "Mot de passe",
     "DeleteImage": "Supprimer l'image",
-    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
-    "MessagePleaseSupportProject": "Please support Emby.",
+    "MessageThankYouForSupporting": "Merci de supporter Emby.",
+    "MessagePleaseSupportProject": "Merci de supporter Emby.",
     "DeleteImageConfirmation": "\u00cates-vous s\u00fbr de vouloir supprimer l'image?",
     "FileReadCancelled": "La lecture du fichier a \u00e9t\u00e9 annul\u00e9e.",
     "FileNotFound": "Fichier introuvable.",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Merci. Votre cl\u00e9 de supporteur a \u00e9t\u00e9 supprim\u00e9e.",
     "ErrorLaunchingChromecast": "Une erreur a \u00e9t\u00e9 rencontr\u00e9e lors du lancement de Chromecast. Veuillez vous assurer que votre appareil est bien connect\u00e9 \u00e0 votre r\u00e9seau sans-fil.",
     "MessageErrorLoadingSupporterInfo": "Il y a eu une erreur lors du chargement des informations de supporter. Veuillez r\u00e9essayer plus tard.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Liez votre cl\u00e9 de supporteur avec un maximum de {0} membres Emby Connect pour b\u00e9n\u00e9ficier de l'acc\u00e8s gratuit aux applications suivantes :",
     "HeaderConfirmRemoveUser": "Supprimer l'utilisateur",
     "MessageSwipeDownOnRemoteControl": "Bienvenue dans le contr\u00f4le \u00e0 distance. Glissez vers le base n'importe o\u00f9 sur cet \u00e9cran pour revenir l\u00e0 d'o\u00f9 vous venez",
     "MessageConfirmRemoveConnectSupporter": "Etes-vous s\u00fbr de vouloir supprimer les avantages additionnels de supporteur pour cet utilisateur ?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "Cette op\u00e9ration s'ex\u00e9cute normalement automatiquement en tant que t\u00e2che planifi\u00e9e. Elle peut aussi \u00eatre ex\u00e9cut\u00e9e manuellement ici. Pour configurer la t\u00e2che planifi\u00e9e, voir:",
     "HeaderSupporterBenefit": "Un partenariat de membre supporteur apporte des avantages suppl\u00e9mentaires, comme l'acc\u00e8s \u00e0 la synchronisation, aux plugins premiums, aux contenus des cha\u00eenes Internet, et plus encore. {0}En savoir plus{1}.",
     "LabelSyncNoTargetsHelp": "Il semble que vous n'ayez actuellement aucune application qui supporte la synchronisation.",
-    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
-    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
+    "HeaderWelcomeToProjectServerDashboard": "Bienvenue dans le tableau de bord du serveur Emby",
+    "HeaderWelcomeToProjectWebClient": "Bienvenue dans client Web Emby",
     "ButtonTakeTheTour": "Visite guid\u00e9e",
     "HeaderWelcomeBack": "Bienvenue !",
     "TitleSync": "Sync.",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Veuillez s\u00e9lectionner au moins un item.",
     "MessagePleaseSelectTwoItems": "Veuillez s\u00e9lectionner au moins deux items.",
     "MessageTheFollowingItemsWillBeGrouped": "Les titres suivants seront group\u00e9s en un seul item:",
-    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
+    "MessageConfirmItemGrouping": "Les applications Emby choisiront automatiquement la version optimale de lecture en fonction de l'appareil et la qualit\u00e9 du r\u00e9seau. Etes-vous s\u00fbr de vouloir continuer ?",
     "HeaderResume": "Reprendre",
     "HeaderMyViews": "Mes affichages",
     "HeaderLibraryFolders": "R\u00e9pertoires de m\u00e9dias",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "R\u00e9sultat : {0}",
     "HeaderRestart": "Red\u00e9marrer",
     "HeaderShutdown": "\u00c9teindre",
-    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
-    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
+    "MessageConfirmRestart": "Etes-vous s\u00fbr de vouloir red\u00e9marrer le serveur Emby ?",
+    "MessageConfirmShutdown": "Etes-vous s\u00fbr de vouloir \u00e9teindre le serveur Emby ?",
     "ButtonUpdateNow": "Mettre \u00e0 jour maintenant",
     "ValueItemCount": "{0} \u00e9l\u00e9ment",
     "ValueItemCountPlural": "{0} \u00e9l\u00e9ments",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "Cha\u00eenes TV en direct",
     "OptionBlockChannelContent": "Cha\u00eenes Internet",
     "ButtonRevoke": "R\u00e9voquer",
-    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
+    "MessageConfirmRevokeApiKey": "Etes-vous s\u00fbr de vouloir r\u00e9voquer cette cl\u00e9 d'api ? La connexion de cette application au serveur Emby sera brutalement interrompue.",
     "HeaderConfirmRevokeApiKey": "R\u00e9voquer la cl\u00e9 API",
     "ValueContainer": "Conteneur : {0}",
     "ValueAudioCodec": "Codec Audio : {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "Ce plugin doit-\u00eatre install\u00e9 depuis l'application dans laquelle vous voulez l'utiliser",
     "ValuePriceUSD": "Prix: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Vous \u00eates enregistr\u00e9 pour cette fonctionnalit\u00e9, et vous pourrez continuer \u00e0 l'utiliser avec un compte actif de supporteur partenaire.",
-    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
+    "MessageChangeRecurringPlanConfirm": "Apr\u00e8s avoir termin\u00e9 cette transaction, vous devrez annuler votre donation r\u00e9currente depuis votre compte PayPal. Merci de supporter Emby.",
     "MessageSupporterMembershipExpiredOn": "Votre compte supporteur partenaire expire le {0}",
-    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
+    "MessageYouHaveALifetimeMembership": "Vous \u00eates membres supporteur \u00e0 vie. Vous pouvez effectuez des dons ponctuels ou r\u00e9currents compl\u00e9mentaires \u00e0 l'aide des options ci-dessous. Merci de supporter Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Vous avez un compte actif de supporteur {0}. Vous pouvez le mettre \u00e0 jour suivant les options ci-dessous.",
     "ButtonDelete": "Supprimer",
-    "HeaderEmbyAccountAdded": "Emby Account Added",
-    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
-    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
-    "HeaderEmbyAccountRemoved": "Emby Account Removed",
-    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
-    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderEmbyAccountAdded": "Compte Emby ajout\u00e9",
+    "MessageEmbyAccountAdded": "Le compte Emby a \u00e9t\u00e9 ajout\u00e9 \u00e0 cet utilisateur.",
+    "MessagePendingEmbyAccountAdded": "Le compte Emby a \u00e9t\u00e9 ajout\u00e9 \u00e0 cet utilisateur. Un email va \u00eatre envoy\u00e9 au propri\u00e9taire du compte. L'invitation devra \u00eatre confirm\u00e9e  en cliquant sur le lien contenu dans l'email.",
+    "HeaderEmbyAccountRemoved": "Compte Emby supprim\u00e9",
+    "MessageEmbyAccontRemoved": "Le compte Emby a \u00e9t\u00e9 supprim\u00e9 pour cet utilisateur.",
+    "TooltipLinkedToEmbyConnect": "Li\u00e9 \u00e0 Emby Connect",
     "HeaderUnrated": "Non not\u00e9",
     "ValueDiscNumber": "Disque {0}",
     "HeaderUnknownDate": "Date inconnue",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Cliquer sur modifier pour ouvrir l'\u00e9diteur de m\u00e9dadonn\u00e9es",
     "WebClientTourPlaylists": "Cr\u00e9ez facilement des listes de lectures et des mixes instantan\u00e9s, et jouez les sur n'importe quel p\u00e9riph\u00e9rique",
     "WebClientTourCollections": "Cr\u00e9ez des collections de films pour les regrouper les \u00e9l\u00e9ments d'un coffret",
-    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
-    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
+    "WebClientTourUserPreferences1": "Les pr\u00e9f\u00e9rences utilisateur vous permettent de personnaliser la pr\u00e9sentation de la biblioth\u00e8que pour toutes les applications Emby.",
+    "WebClientTourUserPreferences2": "Configurez vos pr\u00e9f\u00e9rences audio et sous-titres une fois pour toutes les applications Emby.",
     "WebClientTourUserPreferences3": "Modelez la page d'accueil du client web \u00e0 votre convenance",
     "WebClientTourUserPreferences4": "Configurer les images de fonds, les th\u00e8mes musicaux et les lecteurs externes",
     "WebClientTourMobile1": "Le client web fonctionne parfaitement sur les smartphones et les tablettes...",
-    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
+    "WebClientTourMobile2": "et contr\u00f4lez facilement les autres appareils et applications Emby",
     "WebClientTourMySync": "Synchronisez vos m\u00e9dias personnels avec vos appareils pour les visionner en mode d\u00e9connect\u00e9.",
     "MessageEnjoyYourStay": "Amusez-vous bien !",
     "DashboardTourDashboard": "Le tableau de bord du serveur vous permet de g\u00e9rer votre serveur et vos utilisateurs. Vous saurez toujours qui fait quoi et o\u00f9.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Installez des plugins : cha\u00eenes vid\u00e9os internet, TV en direct, analyseur de m\u00e9tadonn\u00e9es, et plus encore.",
     "DashboardTourNotifications": "Envoyez automatiquement les notifications d'\u00e9v\u00e9nements du serveur vers vos appareils mobiles,  vos adresses email et plus encore.",
     "DashboardTourScheduledTasks": "G\u00e9rez facilement les op\u00e9rations longues des taches planifi\u00e9es. Sp\u00e9cifiez quand et \u00e0 quelle fr\u00e9quence elles doivent se lancer.",
-    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
+    "DashboardTourMobile": "Le tableau de bord du serveur Emby fonctionne tr\u00e8s bien sur smartphones et tablettes. G\u00e9rez votre serveur depuis la paume de votre main depuis n'importe o\u00f9, n'importe quand.",
     "DashboardTourSync": "Synchronisez vos m\u00e9dias personnels avec vos appareils pour les visionner en mode d\u00e9connect\u00e9.",
     "MessageRefreshQueued": "Demande d'actualisation en file d'attente",
     "TabDevices": "Appareils",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "\u00cates-vous s\u00fbr de vouloir supprimer cet appareil ? La prochaine fois qu'un utilisateur se connecte depuis cet appareil, il sera ajout\u00e9 \u00e0 nouveau.",
     "LabelEnableCameraUploadFor": "Autoriser l'upload du contenu de l'appareil photo pour:",
     "HeaderSelectUploadPath": "S\u00e9lectionner le r\u00e9pertoire d'upload",
-    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
+    "LabelEnableCameraUploadForHelp": "Les uploads se feront automatiquement en t\u00e2che de fond apr\u00e8s la connexion \u00e0 Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "La date de fin doit \u00eatre post\u00e9rieure \u00e0 la date de d\u00e9but.",
     "ButtonLibraryAccess": "Acc\u00e8s \u00e0 la biblioth\u00e8que",
     "ButtonParentalControl": "Contr\u00f4le parental",
     "HeaderInvitationSent": "Invitation envoy\u00e9e",
     "MessageInvitationSentToUser": "Un mail a \u00e9t\u00e9 envoy\u00e9 \u00e0 {0} avec votre invitation de partage.",
-    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
+    "MessageInvitationSentToNewUser": "Un email d'invitation \u00e0 Emby a \u00e9t\u00e9 envoy\u00e9 \u00e0 {0}.",
     "HeaderConnectionFailure": "Erreur de connexion",
     "MessageUnableToConnectToServer": "Nous sommes dans l'impossibilit\u00e9 de nous connecter au serveur s\u00e9lectionn\u00e9. Veuillez v\u00e9rifier qu'il est bien d\u00e9marr\u00e9 et r\u00e9essayez.",
     "ButtonSelectServer": "S\u00e9lectionner le serveur",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "Le code PIN est invalide ou a expir\u00e9. Veuillez r\u00e9essayer.",
     "MessagePasswordResetForUsers": "Les mot de passes ont \u00e9t\u00e9 supprim\u00e9s pour les utilisateurs suivants :",
     "HeaderInviteGuest": "Inviter une personne",
-    "ButtonLinkMyEmbyAccount": "Link my account now",
-    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
+    "ButtonLinkMyEmbyAccount": "Lier mon compte maintenant",
+    "MessageConnectAccountRequiredToInviteGuest": "Vous devez d'abord lier votre compte Emby \u00e0 ce serveur avant de pouvoir accueillir des invit\u00e9s.",
     "ButtonSync": "Sync",
     "SyncMedia": "Sync. les m\u00e9dias",
     "HeaderCancelSyncJob": "Annuler la sync.",
