--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/kk.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/kk.json
@@ -7,7 +7,7 @@
     "Password": "\u049a\u04b1\u043f\u0438\u044f \u0441\u04e9\u0437",
     "DeleteImage": "\u0421\u0443\u0440\u0435\u0442\u0442\u0456 \u0436\u043e\u044e",
     "MessageThankYouForSupporting": "Thank you for supporting Emby.",
-    "MessagePleaseSupportProject": "Please support Emby.",
+    "MessagePleaseSupportProject": "Emby \u049b\u043e\u043b\u0434\u0430\u04a3\u044b\u0437.",
     "DeleteImageConfirmation": "\u0428\u044b\u043d\u044b\u043c\u0435\u043d \u0431\u04b1\u043b \u0441\u0443\u0440\u0435\u0442\u0442\u0456 \u0436\u043e\u044e \u049b\u0430\u0436\u0435\u0442 \u043f\u0435?",
     "FileReadCancelled": "\u0424\u0430\u0439\u043b \u043e\u049b\u0443\u044b \u0431\u043e\u043b\u0434\u044b\u0440\u044b\u043b\u043c\u0430\u0434\u044b.",
     "FileNotFound": "\u0424\u0430\u0439\u043b \u0442\u0430\u0431\u044b\u043b\u043c\u0430\u0434\u044b.",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "\u0411\u04b1\u043b \u04d9\u0440\u0435\u043a\u0435\u0442 \u04d9\u0434\u0435\u0442\u0442\u0435 \u0436\u043e\u0441\u043f\u0430\u0440\u043b\u0430\u0493\u0430\u043d \u0442\u0430\u043f\u0441\u044b\u0440\u043c\u0430 \u0440\u0435\u0442\u0456\u043d\u0434\u0435 \u0430\u0432\u0442\u043e\u043c\u0430\u0442\u0442\u044b \u0442\u04af\u0440\u0434\u0435 \u0436\u04b1\u043c\u044b\u0441 \u0456\u0441\u0442\u0435\u0439\u0434\u0456. \u041e\u0441\u044b\u043d\u044b \u0441\u043e\u043d\u0434\u0430\u0439-\u0430\u049b \u0431\u04b1\u043b \u0436\u0435\u0440\u0434\u0435 \u049b\u043e\u043b\u043c\u0435\u043d \u0456\u0441\u043a\u0435 \u049b\u043e\u0441\u0443\u0493\u0430 \u0431\u043e\u043b\u0430\u0434\u044b. \u0416\u043e\u0441\u043f\u0430\u0440\u043b\u0430\u0493\u0430\u043d \u0442\u0430\u043f\u0441\u044b\u0440\u043c\u0430\u043d\u044b \u0442\u0435\u04a3\u0448\u0435\u0443 \u04af\u0448\u0456\u043d, \u049b\u0430\u0440\u0430\u04a3\u044b\u0437:",
     "HeaderSupporterBenefit": "\u0416\u0430\u049b\u0442\u0430\u0443\u0448\u044b \u043c\u04af\u0448\u0435\u043b\u0456\u043a \u049b\u043e\u0441\u044b\u043c\u0448\u0430 \u0430\u0440\u0442\u044b\u049b\u0448\u044b\u043b\u044b\u049b\u0442\u0430\u0440\u0434\u044b (\u043c\u044b\u0441\u0430\u043b\u044b, \u04af\u043d\u0434\u0435\u0441\u0442\u0456\u0440\u0443\u0433\u0435 \u049b\u0430\u0442\u044b\u043d\u0430\u0443, \u0441\u044b\u0439\u0430\u049b\u044b\u043b\u044b\u049b \u043f\u043b\u0430\u0433\u0438\u043d\u0434\u0435\u0440, \u0438\u043d\u0442\u0435\u0440\u043d\u0435\u0442 \u0430\u0440\u043d\u0430\u0441\u044b\u043d\u044b\u04a3 \u043c\u0430\u0437\u043c\u04b1\u043d\u044b \u0436\u0430\u04a3\u0435 \u0442.\u0431.) \u049b\u0430\u043c\u0442\u0430\u043c\u0430\u0441\u044b\u0437 \u0435\u0442\u0435\u0434\u0456. {0}\u041a\u04e9\u0431\u0456\u0440\u0435\u043a \u0431\u0456\u043b\u0443{1}.",
     "LabelSyncNoTargetsHelp": "\u04ae\u043d\u0434\u0435\u0441\u0442\u0456\u0440\u0443\u0434\u0456 \u049b\u043e\u043b\u0434\u0430\u0439\u0442\u044b\u043d  \u049b\u043e\u043b\u0434\u0430\u043d\u0431\u0430 \u0442\u0430\u0431\u044b\u043b\u043c\u0430\u0434\u044b.",
-    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
-    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
+    "HeaderWelcomeToProjectServerDashboard": "Emby Server \u0431\u0430\u049b\u044b\u043b\u0430\u0443 \u0442\u0430\u049b\u0442\u0430\u0441\u044b\u043d\u0430 \u049b\u043e\u0448 \u043a\u0435\u043b\u0434\u0456\u04a3\u0456\u0437!",
+    "HeaderWelcomeToProjectWebClient": "Emby \u0493\u0430\u043b\u0430\u043c\u0442\u043e\u0440 \u043a\u043b\u0438\u0435\u043d\u0442\u0456\u043d\u0435 \u049b\u043e\u0448 \u043a\u0435\u043b\u0434\u0456\u04a3\u0456\u0437!",
     "ButtonTakeTheTour": "\u0410\u0440\u0430\u043b\u0430\u043f \u0448\u044b\u0493\u044b\u04a3\u044b\u0437",
     "HeaderWelcomeBack": "\u049a\u0430\u0439\u0442\u0430 \u043a\u0435\u043b\u0443\u0456\u04a3\u0456\u0437\u0431\u0435\u043d!",
     "TitleSync": "\u04ae\u043d\u0434\u0435\u0441\u0442\u0456\u0440\u0443",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "\u041d\u04d9\u0442\u0438\u0436\u0435\u0441\u0456: {0}",
     "HeaderRestart": "\u049a\u0430\u0439\u0442\u0430 \u0456\u0441\u043a\u0435 \u049b\u043e\u0441\u0443",
     "HeaderShutdown": "\u0416\u04b1\u043c\u044b\u0441\u0442\u044b \u0430\u044f\u049b\u0442\u0430\u0443",
-    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
-    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
+    "MessageConfirmRestart": "\u0428\u044b\u043d\u044b\u043c\u0435\u043d Emby Server \u04af\u0448\u0456\u043d \u049b\u0430\u0439\u0442\u0430 \u0456\u0441\u043a\u0435 \u049b\u043e\u0441\u0443 \u049b\u0430\u0436\u0435\u0442 \u043f\u0435?",
+    "MessageConfirmShutdown": "\u0428\u044b\u043d\u044b\u043c\u0435\u043d Emby Server \u0436\u04b1\u043c\u044b\u0441\u044b\u043d \u0430\u044f\u049b\u0442\u0430\u0443 \u049b\u0430\u0436\u0435\u0442 \u043f\u0435?",
     "ButtonUpdateNow": "\u049a\u0430\u0437\u0456\u0440 \u0436\u0430\u04a3\u0430\u0440\u0442\u0443",
     "ValueItemCount": "{0} \u0442\u0430\u0440\u043c\u0430\u049b",
     "ValueItemCountPlural": "{0} \u0442\u0430\u0440\u043c\u0430\u049b",
@@ -529,12 +529,12 @@
     "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "\u0411\u0435\u043b\u0441\u0435\u043d\u0434\u0456 {0} \u043c\u04af\u0448\u0435\u043b\u0456\u0433\u0456\u043d\u0435 \u0442\u0438\u0435\u0441\u043b\u0456\u0441\u0456\u0437. \u0422\u04e9\u043c\u0435\u043d\u0434\u0435\u0433\u0456 \u043d\u04b1\u0441\u049b\u0430\u043b\u0430\u0440\u0434\u044b \u043f\u0430\u0439\u0434\u0430\u043b\u0430\u043d\u044b\u043f \u0436\u043e\u0441\u043f\u0430\u0440\u044b\u04a3\u044b\u0437\u0434\u044b \u043a\u04e9\u0442\u0435\u0440\u0443 \u043c\u04af\u043c\u043a\u0456\u043d\u0434\u0456\u0433\u0456\u04a3\u0456\u0437 \u0431\u0430\u0440",
     "ButtonDelete": "\u0416\u043e\u044e",
-    "HeaderEmbyAccountAdded": "Emby Account Added",
-    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
-    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
-    "HeaderEmbyAccountRemoved": "Emby Account Removed",
-    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
-    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderEmbyAccountAdded": "Emby \u0442\u0456\u0440\u043a\u0435\u043b\u0433\u0456\u0441\u0456 \u04af\u0441\u0442\u0435\u043b\u0456\u043d\u0434\u0456",
+    "MessageEmbyAccountAdded": "Emby \u0442\u0456\u0440\u043a\u0435\u043b\u0433\u0456\u0441\u0456 \u043e\u0441\u044b \u043f\u0430\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0448\u044b\u0433\u0430 \u04af\u0441\u0442\u0435\u043b\u0456\u043d\u0434\u0456.",
+    "MessagePendingEmbyAccountAdded": "Emby \u0442\u0456\u0440\u043a\u0435\u043b\u0433\u0456\u0441\u0456 \u043e\u0441\u044b \u043f\u0430\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0448\u044b\u0433\u0430 \u04af\u0441\u0442\u0435\u043b\u0456\u043d\u0434\u0456. \u0422\u0456\u0440\u043a\u0435\u043b\u0433\u0456 \u0438\u0435\u0441\u0456\u043d\u0435 \u044d-\u043f\u043e\u0448\u0442\u0430 \u0436\u0456\u0431\u0435\u0440\u0456\u043b\u0435\u0434\u0456. \u042d-\u043f\u043e\u0448\u0442\u0430\u0434\u0430\u0493\u044b \u0441\u0456\u043b\u0442\u0435\u043c\u0435\u043d\u0456 \u043d\u04b1\u049b\u044b\u043f \u0448\u0430\u049b\u044b\u0440\u0443\u0434\u044b \u0440\u0430\u0441\u0442\u0430\u0443 \u049b\u0430\u0436\u0435\u0442 \u0431\u043e\u043b\u0430\u0434\u044b.",
+    "HeaderEmbyAccountRemoved": "Emby \u0442\u0456\u0440\u043a\u0435\u043b\u0433\u0456\u0441\u0456 \u0430\u043b\u0430\u0441\u0442\u0430\u043b\u0434\u044b",
+    "MessageEmbyAccontRemoved": "Emby \u0442\u0456\u0440\u043a\u0435\u043b\u0433\u0456\u0441\u0456 \u043e\u0441\u044b \u043f\u0430\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0448\u044b\u0434\u0430\u043d \u0430\u043b\u0430\u0441\u0442\u0430\u043b\u044b\u043d\u0434\u044b.",
+    "TooltipLinkedToEmbyConnect": "Emby Connect \u04af\u0448\u0456\u043d \u0431\u0430\u0439\u043b\u0430\u043d\u044b\u0441\u0442\u044b\u0440\u044b\u043b\u0493\u0430\u043d",
     "HeaderUnrated": "\u0411\u0430\u0493\u0430\u043b\u0430\u043d\u0431\u0430\u0493\u0430\u043d",
     "ValueDiscNumber": "{0}-\u0434\u0438\u0441\u043a\u0456",
     "HeaderUnknownDate": "\u041a\u04af\u043d\u0456 \u0431\u0435\u043b\u0433\u0456\u0441\u0456\u0437",
@@ -697,7 +697,7 @@
     "ButtonParentalControl": "\u041c\u0430\u0437\u043c\u04b1\u043d\u0434\u044b \u0431\u0430\u0441\u049b\u0430\u0440\u0443",
     "HeaderInvitationSent": "\u0428\u0430\u049b\u044b\u0440\u0443 \u0436\u0456\u0431\u0435\u0440\u0456\u043b\u0434\u0456",
     "MessageInvitationSentToUser": "\u041e\u043b\u0430\u0440\u0493\u0430 \u043e\u0440\u0442\u0430\u049b\u0442\u0430\u0441\u0443 \u0448\u0430\u049b\u044b\u0440\u0443\u044b\u04a3\u044b\u0437\u0434\u044b \u049b\u0430\u0431\u044b\u043b\u0434\u0430\u0443 \u04b1\u0441\u044b\u043d\u044b\u0441\u044b\u043c\u0435\u043d, \u044d-\u043f\u043e\u0448\u0442\u0430 {0} \u0430\u0440\u043d\u0430\u043f \u0436\u0456\u0431\u0435\u0440\u0456\u043b\u0434\u0456.",
-    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
+    "MessageInvitationSentToNewUser": "Emby \u04af\u0448\u0456\u043d \u0442\u0456\u0440\u043a\u0435\u043b\u0443 \u0448\u0430\u049b\u044b\u0440\u0443\u044b\u04a3\u044b\u0437, \u044d-\u043f\u043e\u0448\u0442\u0430 {0} \u04af\u0448\u0456\u043d \u0436\u0456\u0431\u0435\u0440\u0456\u043b\u0434\u0456.",
     "HeaderConnectionFailure": "\u049a\u043e\u0441\u044b\u043b\u0443 \u0441\u04d9\u0442\u0441\u0456\u0437",
     "MessageUnableToConnectToServer": "\u0422\u0430\u04a3\u0434\u0430\u043b\u0493\u0430\u043d \u0441\u0435\u0440\u0432\u0435\u0440\u0433\u0435 \u049b\u043e\u0441\u044b\u043b\u0443\u044b\u043c\u044b\u0437 \u0434\u04d9\u043b \u049b\u0430\u0437\u0456\u0440 \u043c\u04af\u043c\u043a\u0456\u043d \u0435\u043c\u0435\u0441. \u0411\u04b1\u043b \u0456\u0441\u043a\u0435 \u049b\u043e\u0441\u044b\u043b\u0493\u0430\u043d\u044b\u043d\u0430 \u043a\u04e9\u0437 \u0436\u0435\u0442\u043a\u0456\u0437\u0456\u04a3\u0456\u0437 \u0436\u04d9\u043d\u0435 \u04d9\u0440\u0435\u043a\u0435\u0442\u0442\u0456 \u043a\u0435\u0439\u0456\u043d \u049b\u0430\u0439\u0442\u0430\u043b\u0430\u04a3\u044b\u0437.",
     "ButtonSelectServer": "\u0421\u0435\u0440\u0432\u0435\u0440\u0434\u0456 \u0442\u0430\u04a3\u0434\u0430\u0443",
@@ -714,7 +714,7 @@
     "MessageInvalidForgotPasswordPin": "\u0416\u0430\u0440\u0430\u043c\u0441\u044b\u0437 \u043d\u0435\u043c\u0435\u0441\u0435 \u043c\u0435\u0440\u0437\u0456\u043c\u0456 \u0430\u044f\u049b\u0442\u0430\u043b\u0493\u0430\u043d PIN \u0435\u043d\u0433\u0456\u0437\u0456\u043b\u0434\u0456. \u04d8\u0440\u0435\u043a\u0435\u0442\u0442\u0456 \u049b\u0430\u0439\u0442\u0430\u043b\u0430\u04a3\u044b\u0437.",
     "MessagePasswordResetForUsers": "\u049a\u04b1\u043f\u0438\u044f \u0441\u04e9\u0437\u0434\u0435\u0440 \u043a\u0435\u043b\u0435\u0441\u0456 \u043f\u0430\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0448\u044b\u043b\u0430\u0440 \u04af\u0448\u0456\u043d \u0430\u043b\u0430\u0441\u0442\u0430\u043b\u0434\u044b:",
     "HeaderInviteGuest": "\u049a\u043e\u043d\u0430\u049b\u0442\u044b \u0448\u0430\u049b\u044b\u0440\u0443",
-    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "ButtonLinkMyEmbyAccount": "\u0422\u0456\u0440\u043a\u0435\u043b\u0433\u0456\u043c\u0434\u0456 \u0431\u0430\u0439\u043b\u0430\u043d\u044b\u0441\u0442\u044b\u0440\u0443",
     "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "\u04ae\u043d\u0434\u0435\u0441\u0442\u0456\u0440\u0443",
     "SyncMedia": "\u04ae\u043d\u0434\u0435\u0441\u0442\u0456\u0440\u0443",
