--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
@@ -6,7 +6,7 @@
     "Administrator": "Administrator",
     "Password": "Password",
     "DeleteImage": "Delete Image",
-    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessageThankYouForSupporting": "\u0411\u043b\u0430\u0433\u043e\u0434\u0430\u0440\u044f, \u0447\u0435 \u043f\u043e\u0434\u043a\u0440\u0435\u043f\u0438\u0445\u0442\u0435 Emby.",
     "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "Are you sure you wish to delete this image?",
     "FileReadCancelled": "The file read has been canceled.",
@@ -77,10 +77,10 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
-    "NewCollectionNameExample": "Example: Star Wars Collection",
-    "OptionSearchForInternetMetadata": "Search the internet for artwork and metadata",
-    "LabelSelectCollection": "Select collection:",
+    "HeaderAddToCollection": "\u0414\u043e\u0431\u0430\u0432\u0438 \u0432 \u041a\u043e\u043b\u0435\u043a\u0446\u0438\u044f\u0442\u0430",
+    "NewCollectionNameExample": "\u041f\u0440\u0438\u043c\u0435\u0440: \u041a\u043e\u043b\u0435\u043a\u0446\u0438\u044f Star Wars",
+    "OptionSearchForInternetMetadata": "\u0422\u044a\u0440\u0441\u0438 \u0432 \u0418\u043d\u0442\u0435\u0440\u043d\u0435\u0442 \u0437\u0430 \u0438\u0437\u043a\u0443\u0441\u0442\u0432\u043e \u0438 \u043c\u0435\u0442\u0430 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044f",
+    "LabelSelectCollection": "\u0418\u0437\u0431\u0435\u0440\u0438 \u043a\u043e\u043b\u0435\u043a\u0446\u0438\u044f:",
     "HeaderDevices": "Devices",
     "ButtonScheduledTasks": "Scheduled tasks",
     "MessageItemsAdded": "Items added",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Result: {0}",
     "HeaderRestart": "Restart",
     "HeaderShutdown": "Shutdown",
-    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
-    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
+    "MessageConfirmRestart": "\u041d\u0430\u0438\u0441\u0442\u0438\u043d\u0430 \u043b\u0438 \u0438\u0441\u043a\u0430\u0442\u0435 \u0434\u0430 \u0440\u0435\u0441\u0442\u0430\u0440\u0442\u0438\u0440\u0430\u0442\u0435 Emby \u0441\u044a\u0440\u0432\u044a\u0440\u044a\u0442?",
+    "MessageConfirmShutdown": "\u041d\u0430\u0438\u0441\u0442\u0438\u043d\u0430 \u043b\u0438 \u0438\u0441\u043a\u0430\u0442\u0435 \u0434\u0430 \u0441\u043f\u0440\u0435\u0442\u0435 Emby \u0441\u044a\u0440\u0432\u044a\u0440\u044a\u0442?",
     "ButtonUpdateNow": "Update Now",
     "ValueItemCount": "{0} item",
     "ValueItemCountPlural": "{0} items",
